# In-vivo-tFUS-planner

./: README  README.md  REFERENCES  REFERENCES.md
fus_planner/: README.md  pyproject.toml  requirements.txt  run_gui.py
fus_planner/src/fus_planner/: __init__.py
fus_planner/src/fus_planner/geometry/: __init__.py  frames.py
fus_planner/src/fus_planner/gui/: __init__.py  main.py  settings.py
fus_planner/src/fus_planner/io/: __init__.py  centroids.py  volume.py
fus_planner/src/fus_planner/planner/: __init__.py  centroid.py  footprint.py  hex_tile.py  plane.py  region_pack.py  region_pack_3d.py  zplane.py
fus_planner/src/fus_planner/reporting/: __init__.py  coords.py  figures.py
fus_simulator/: README.md  pyproject.toml  requirements-solver.txt  requirements.txt  run_gui.py
fus_simulator/src/fus_simulator/: __init__.py
fus_simulator/src/fus_simulator/core/: __init__.py  atlas.py  calibrate.py  ct_skull.py  gpu.py  grid.py  metrics.py  params.py  plan_io.py  protocol.py  simulate.py  skull.py  thermal.py  transducer.py
fus_simulator/src/fus_simulator/gui/: __init__.py  main.py  settings.py  skull_window.py  viz.py
fus_simulator/tests/: test_core.py
